IPC to preserve instance sequence. Sensors for instruments marked global only queried by master instance

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,16 @@
       "error",
       "unix"
     ],
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "info",
+          "warn",
+          "error"
+        ]
+      }
+    ],
     "quotes": [
       "error",
       "single"
