--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "async": "^2.2.0",
     "aws-iot-device-sdk": "^1.0.14",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "split": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0"
